# CapSolve

./: .env.example  .gitignore  README.md  chrome_slots.py  clientsend.py  config_resolver.py  database.py  job_repository.py  migrate_sql.py  process_jobs.py  production_preflight.py  purge_jobs.py  pyproject.toml  self_check.py  service.py  settings.py  solver.py  worker_freshness.py
deployment/: README.md  api.env.example  backup.env.example  baseline.py  capsolve-api.service  capsolve-backup.service  capsolve-backup.timer  capsolve-ingress-permissions.path  capsolve-ingress-permissions.service  capsolve-nginx.conf.example  capsolve-purge.service  capsolve-purge.timer  capsolve-worker.service  capsolve-worker.timer  capsolve-xvfb.service  cloudflared-config.yml.example  journald@capsolve.conf.example  ops.py  pg_hba.conf.example  postgres_least_privilege.sql  postgresql.conf.example  purge.env.example  recovery-evidence.example.json  secure_nginx_ingress.py  worker.env.example
docs/: production-readiness.md
sql/: 001_budi95_jobs.sql  002_job_attribution.sql  budi95_jobs.sql
tests/: test_api_contract.py  test_api_logging.py  test_api_security.py  test_api_socket.py  test_chrome_runtime.py  test_chrome_slots_postgres.py  test_deployment_baseline.py  test_health_observability.py  test_ingress_socket.py  test_queue_admission.py  test_queue_postgres.py  test_retention_recovery.py  test_settings.py  test_test_database_safety.py  test_worker.py  test_worker_postgres.py
tests/fixtures/: api_contract_500f2e5.json
tools/: capture_api_contract.py  with_disposable_postgres.py
