[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "capsolve"
version = "0.1.0"
description = "FastAPI service for Turnstile solving and upstream result lookup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "nodriver>=0.48.0",
  "psycopg2-binary>=2.9.10",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
capsolve-api = "service:run"
capsolve-migrate-sql = "migrate_sql:main"
capsolve-production-preflight = "production_preflight:main"
capsolve-purge-jobs = "purge_jobs:main"
capsolve-self-check = "self_check:main"
capsolve-worker = "process_jobs:main"

[tool.hatch.build.targets.wheel]
only-include = ["service.py", "solver.py", "settings.py", "chrome_slots.py", "config_resolver.py", "clientsend.py", "database.py", "job_repository.py", "migrate_sql.py", "process_jobs.py", "purge_jobs.py", "production_preflight.py", "worker_freshness.py", "self_check.py", "sql", "deployment"]

[tool.hatch.build.targets.sdist]
only-include = ["service.py", "solver.py", "settings.py", "chrome_slots.py", "config_resolver.py", "clientsend.py", "database.py", "job_repository.py", "migrate_sql.py", "process_jobs.py", "purge_jobs.py", "production_preflight.py", "worker_freshness.py", "self_check.py", "sql", "deployment", "pyproject.toml", "README.md", "uv.lock"]
